update dwith swagger documentation, maven wrapper, readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql=true
 
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
+springdoc.packagesToScan=org.example.person.controllers
 
-spring.security.user.name=syadav
-spring.security.user.password=syadav123
+
+spring.security.user.name=admin
+spring.security.user.password=admin123
