--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,5 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.packagesToScan=org.example.person.controllers
 
-
-spring.security.user.name=admin
-spring.security.user.password=admin123
+spring.security.username=admin
+spring.security.password=admin123
